--- a/style.css
+++ b/style.css
@@ -234,18 +234,45 @@ h2 {
     color: var(--text);
     font-size: 3rem;
     font-weight: normal;
-    margin-bottom: 5rem;
+    margin-bottom: 3rem;
 }
 
 .about_text {
-    font-size: 1.6rem;
+    font-size: 1.5rem;
     color: var(--textBasic);
     line-height: 2.3rem;
+    margin-bottom: 1rem;
 }
 
 .br_hidden {
     display: none;
 }
+
+.text-animation {
+    color: white;
+    background-image: linear-gradient(-225deg,
+                #8ea236 0%,
+                #f4f192 100%);
+    background-size: auto auto;
+    background-clip: border-box;
+    background-size: 200% auto;
+    background-clip: text;
+    text-fill-color: transparent;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+        
+}
+
+.text-animation:hover {
+    cursor: pointer;
+    transition: 700ms linear;
+    background-position: -100% center;
+}
+
+.text-animation::selection {
+    background-color: transparent;
+}
+
 
 /* **********  ********** */
 
@@ -669,6 +696,7 @@ swiper-container {
     }
 
     h2 {
+        margin-top: 2rem;
         margin-bottom: 2rem;
     }
 
