--- a/style.css
+++ b/style.css
@@ -504,6 +504,10 @@ h4 {
     max-height: 6rem;
 }
 
+.snapwidget-widget {
+    width: 80%;
+}
+
 swiper-container {
     width: 100%;
     height: 100%;
